{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 1187,
  "lineage": "efa70088-1ac5-4f74-77ab-705a33227ad3",
  "resources": [
    {
      "module": "module.igw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "module.igw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091570247959:internet-gateway/igw-0f6bb25dac36ce125",
            "id": "igw-0f6bb25dac36ce125",
            "owner_id": "091570247959",
            "tags": {
              "Environment": "dev",
              "Name": "vprofile-igw",
              "Project": "vprofile-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vprofile-igw",
              "Project": "vprofile-project"
            },
            "vpc_id": "vpc-093d996a04f74d1d5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ngw",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "module.ngw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-060d66818c438fdc4",
            "association_id": "eipassoc-0dc17a119e862bd4b",
            "domain": "vpc",
            "id": "eipalloc-060d66818c438fdc4",
            "network_border_group": "us-east-1",
            "network_interface": "eni-00c0bce79c77fe917",
            "private_dns": "ip-10-0-1-194.ec2.internal",
            "private_ip": "10.0.1.194",
            "public_dns": "ec2-35-175-39-76.compute-1.amazonaws.com",
            "public_ip": "35.175.39.76",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.ngw",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "module.ngw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-060d66818c438fdc4",
            "association_id": "eipassoc-0dc17a119e862bd4b",
            "connectivity_type": "public",
            "id": "nat-0c82e61ec9edd7194",
            "network_interface_id": "eni-00c0bce79c77fe917",
            "private_ip": "10.0.1.194",
            "public_ip": "35.175.39.76",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-055e3e5b45e54e9fb",
            "tags": {
              "Environment": "dev",
              "Name": "vprofile-ngw",
              "Project": "vprofile-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vprofile-ngw",
              "Project": "vprofile-project"
            }
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.gw",
            "module.ngw.aws_eip.nat_eip",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.routeable",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-subnet",
      "provider": "module.routeable.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091570247959:route-table/rtb-07b9442430d787939",
            "id": "rtb-07b9442430d787939",
            "owner_id": "091570247959",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c82e61ec9edd7194",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "vprofile-private-RT",
              "Project": "vprofile-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vprofile-private-RT",
              "Project": "vprofile-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-093d996a04f74d1d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.igw.aws_internet_gateway.gw",
            "module.ngw.aws_eip.nat_eip",
            "module.ngw.aws_nat_gateway.nat-gw",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.routeable",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-subnet",
      "provider": "module.routeable.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091570247959:route-table/rtb-0e86ec528befcea52",
            "id": "rtb-0e86ec528befcea52",
            "owner_id": "091570247959",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f6bb25dac36ce125",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "vprofile-public-RT",
              "Project": "vprofile-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vprofile-public-RT",
              "Project": "vprofile-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-093d996a04f74d1d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.igw.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.routeable",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.routeable.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08723f9518c9bf9c2",
            "route_table_id": "rtb-07b9442430d787939",
            "subnet_id": "subnet-03250a17681f3945b"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.gw",
            "module.ngw.aws_eip.nat_eip",
            "module.ngw.aws_nat_gateway.nat-gw",
            "module.routeable.aws_route_table.private-subnet",
            "module.subnets.aws_subnet.private",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.routeable",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "module.routeable.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bb517c16e35d0221",
            "route_table_id": "rtb-07b9442430d787939",
            "subnet_id": "subnet-0d117c6686aaa0715"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.gw",
            "module.ngw.aws_eip.nat_eip",
            "module.ngw.aws_nat_gateway.nat-gw",
            "module.routeable.aws_route_table.private-subnet",
            "module.subnets.aws_subnet.private1",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.routeable",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.routeable.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-074580e5971329671",
            "route_table_id": "rtb-0e86ec528befcea52",
            "subnet_id": "subnet-055e3e5b45e54e9fb"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.gw",
            "module.routeable.aws_route_table.public-subnet",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.routeable",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "module.routeable.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a2bc569063273557",
            "route_table_id": "rtb-0e86ec528befcea52",
            "subnet_id": "subnet-07a3551110a95addd"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.gw",
            "module.routeable.aws_route_table.public-subnet",
            "module.subnets.aws_subnet.public1",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend-servers",
      "provider": "module.securitygroups.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091570247959:security-group/sg-09778aa88e570d7c7",
            "description": "security group for backend servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09778aa88e570d7c7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01fd76fb95f822e8d"
                ],
                "self": true,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "open db port for webapp",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01fd76fb95f822e8d"
                ],
                "self": true,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "open memcached port for webapp",
                "from_port": 11211,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 11211
              },
              {
                "cidr_blocks": [],
                "description": "open rabbitmq port for webapp",
                "from_port": 5672,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 5672
              },
              {
                "cidr_blocks": [],
                "description": "open webapp port for nginx(frontend) ",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01fd76fb95f822e8d"
                ],
                "self": true,
                "to_port": 8080
              }
            ],
            "name": "backend-servers",
            "name_prefix": "",
            "owner_id": "091570247959",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "backend-servers-sg",
              "Project": "vprofile-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "backend-servers-sg",
              "Project": "vprofile-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-093d996a04f74d1d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.securitygroups.aws_security_group.frontend-servers",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks-sg",
      "provider": "module.securitygroups.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091570247959:security-group/sg-0e9243ec57c86e30a",
            "description": "Example security group allowing all traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic to anywhere",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e9243ec57c86e30a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow all inbound traffic from itself",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "eks-security-group",
            "name_prefix": "",
            "owner_id": "091570247959",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-093d996a04f74d1d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend-servers",
      "provider": "module.securitygroups.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091570247959:security-group/sg-01fd76fb95f822e8d",
            "description": "security group for nginx-server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01fd76fb95f822e8d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "frontend-servers",
            "name_prefix": "",
            "owner_id": "091570247959",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "frontend-servers-sg",
              "Project": "vprofile-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "frontend-servers-sg",
              "Project": "vprofile-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-093d996a04f74d1d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.subnets.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091570247959:subnet/subnet-03250a17681f3945b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03250a17681f3945b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "091570247959",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vprofile-sub-private",
              "Project": "vprofile-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vprofile-sub-private",
              "Project": "vprofile-project"
            },
            "vpc_id": "vpc-093d996a04f74d1d5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "module.subnets.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091570247959:subnet/subnet-0d117c6686aaa0715",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d117c6686aaa0715",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "091570247959",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vprofile-sub-private2",
              "Project": "vprofile-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vprofile-sub-private2",
              "Project": "vprofile-project"
            },
            "vpc_id": "vpc-093d996a04f74d1d5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.subnets.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091570247959:subnet/subnet-055e3e5b45e54e9fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-055e3e5b45e54e9fb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "091570247959",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vprofile-sub-public",
              "Project": "vprofile-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vprofile-sub-public",
              "Project": "vprofile-project"
            },
            "vpc_id": "vpc-093d996a04f74d1d5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "module.subnets.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091570247959:subnet/subnet-07a3551110a95addd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a3551110a95addd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "091570247959",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vprofile-sub-public2",
              "Project": "vprofile-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vprofile-sub-public2",
              "Project": "vprofile-project"
            },
            "vpc_id": "vpc-093d996a04f74d1d5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091570247959:vpc/vpc-093d996a04f74d1d5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01be8bd14f88bad07",
            "default_route_table_id": "rtb-032650de1f76fb383",
            "default_security_group_id": "sg-011ac077896ad053e",
            "dhcp_options_id": "dopt-0ef3da9f8262dfc65",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-093d996a04f74d1d5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-032650de1f76fb383",
            "owner_id": "091570247959",
            "tags": {
              "Environment": "dev",
              "Name": "vprofile-vpc",
              "Project": "vprofile-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vprofile-vpc",
              "Project": "vprofile-project"
            }
          }
        }
      ]
    }
  ]
}